Finalizando la app de tareas y terminando de dar estilos a la app de Rick & Morty

--- a/Tasks/index.html
+++ b/Tasks/index.html
@@ -11,12 +11,8 @@
   </head>
   <body>
     <form id="form">
-      <input
-        type="text"
-        id="text"
-        placeholder="Write a new task..."
-        autofocus
-      />
+      <input type="text" id="course" placeholder="Course..." autofocus />
+      <input type="text" id="task" placeholder="Task..." autofocus />
       <button class="btn">Add Task</button>
     </form>
     <ul id="list"></ul>
